--- a/src/main/resources/templates/usuarios.html
+++ b/src/main/resources/templates/usuarios.html
@@ -51,7 +51,7 @@
 						<div id="hayUsuarios" th:case="false">
 							<table class="table table-dark table-hover table-sm ">
 								<tr>
-									
+
 									<th>Usuario</th>
 									<th>Contraseña</th>
 									<th>Nombre</th>
@@ -61,87 +61,97 @@
 									<th>Rol</th>
 								</tr>
 								<tr th:each="usuario : ${usuarios}">
-									
+
 									<td th:text="${usuario.zapatilla}">Onions</td>
 									<td th:text="${usuario.password}"></td>
 									<td th:text="${usuario.nombre}"></td>
 									<td th:text="${usuario.apellidos}"></td>
 									<td th:text="${usuario.email}"></td>
 									<td th:text="${usuario.telefono}"></td>
-									<td th:text="${usuario.telefono}"></td>
-									<td th:text="${usuario.roles}"></td>
-									 <td><a type="button" class="btn btn-danger btn-sm" th:href="@{/usuarios/borrar/{id}(id=${usuario.zapatilla})}">Eliminar</a></td>
+									<td th:each="rol: ${roles}">
+										<p th:text="${rol.nombre_rol}"></p>
+									</td>
+									<td><a type="button" class="btn btn-danger btn-sm"
+										th:href="@{/usuarios/borrar/{id}(id=${usuario.zapatilla})}">Eliminar</a></td>
 								</tr>
 							</table>
 
-							
 
-							
+
+
 						</div>
 					</div>
-					
+
 					<!-- Button trigger modal -->
-							<button type="button" class="btn btn-primary" data-toggle="modal"
-								data-target="#exampleModal">Nuevo mensaje</button>
-								
-								
-								
-								<!-- Modal -->
-							<div class="modal fade" id="exampleModal" tabindex="-1"
-								role="dialog" aria-labelledby="exampleModalLabel"
-								aria-hidden="true">
-								<div class="modal-dialog" role="document">
-									<div class="modal-content">
-										<div class="modal-header">
-											<h5 class="modal-title" id="exampleModalLabel">Añadir
-												Usuario</h5>
-											<button type="button" class="close" data-dismiss="modal"
-												aria-label="Close">
-												<span aria-hidden="true">&times;</span>
-											</button>
-										</div>
-										<div class="modal-body">
-											<form action="#" th:action="@{/usuarios/anadir}"
-												th:object="${usuario}" method="post">
+					<button type="button" class="btn btn-primary" data-toggle="modal"
+						data-target="#exampleModal">Nuevo mensaje</button>
 
-												<p>
-													Usuario: <input type="text" th:field="*{zapatilla}" />
-												</p>
-												<p>
-													Contraseña: <input type="text" th:field="*{password}" />
-												</p>
-												<p>
-													Nombre: <input type="text" th:field="*{nombre}" />
-												</p>
-												<p>
-													Apellidos: <input type="text" th:field="*{apellidos}" />
-												</p>
-												<p>
-													E-mail: <input type="text" th:field="*{email}" />
-												</p>
-												<p>
-													Telefono: <input type="text" th:field="*{telefono}" />
-												</p>
- 
 
-												<p>
-													<input type="submit" value="Submit" /> <input type="reset"
-														value="Reset" />
-												</p>
-											</form>
-										</div>
-										<div class="modal-footer">
-											<button type="button" class="btn btn-secondary"
-												data-dismiss="modal">Close</button>
-											<button type="button" class="btn btn-primary">Save
-												changes</button>
-										</div>
-									</div>
+
+					<!-- Modal -->
+					<div class="modal fade" id="exampleModal" tabindex="-1"
+						role="dialog" aria-labelledby="exampleModalLabel"
+						aria-hidden="true">
+						<div class="modal-dialog" role="document">
+							<div class="modal-content">
+								<div class="modal-header">
+									<h5 class="modal-title" id="exampleModalLabel">Añadir
+										Usuario</h5>
+									<button type="button" class="close" data-dismiss="modal"
+										aria-label="Close">
+										<span aria-hidden="true">&times;</span>
+									</button>
+								</div>
+								<div class="modal-body">
+									<form action="#" th:action="@{/usuarios/anadir}"
+										th:object="${usuario}" method="post">
+
+										<p>
+											Usuario: <input type="text" th:field="*{zapatilla}" />
+										</p>
+										<p>
+											Contraseña: <input type="text" th:field="*{password}" />
+										</p>
+										<p>
+											Nombre: <input type="text" th:field="*{nombre}" />
+										</p>
+										<p>
+											Apellidos: <input type="text" th:field="*{apellidos}" />
+										</p>
+										<p>
+											E-mail: <input type="text" th:field="*{email}" />
+										</p>
+										<p>
+											Telefono: <input type="text" th:field="*{telefono}" />
+										</p>
+										
+										<p>
+											Telefono: <input type="text" th:field="*{telefono}" />
+										</p>
+										
+										<p>
+											Rol: <input type="text" th:field="${rol}" />
+										</p>
+										
+
+										<p>
+											<input type="submit" value="Submit" /> <input type="reset"
+												value="Reset" />
+										</p>
+									</form>
+								</div>
+								<div class="modal-footer">
+									<button type="button" class="btn btn-secondary"
+										data-dismiss="modal">Close</button>
+									<button type="button" class="btn btn-primary">Save
+										changes</button>
 								</div>
 							</div>
-							
-							
-							
+						</div>
+					</div>
+
+
+
 				</div>
 				<!--  fin de mis datos -->
 
